MiniSitePreview: Ensure fade overlay covers the bottom-most pixel

--- a/client/components/mini-site-preview/style.scss
+++ b/client/components/mini-site-preview/style.scss
@@ -24,6 +24,7 @@
 	.mini-site-preview__image {
 		border: 1px solid #c6d7e2;
 		position: relative;
+		overflow: hidden;
 
 		&:after {
 			content: '';
@@ -38,6 +39,7 @@
 				rgba( 255, 255, 255, 0 ) 50%,
 				rgba( 255, 255, 255, 1 )
 			);
+			background-repeat: no-repeat;
 		}
 	}
 
